# bootloader_change_address

./: .gitignore  README.md
components/ble/common/: ble_srv_common.c
components/boards/: boards.h
components/libraries/bootloader/: bootloader_debug_uart.c  bootloader_debug_uart.h  nrf_bootloader_app_start.c  nrf_bootloader_info.c
components/libraries/bootloader/dfu/: nrf_dfu_types.h  nrf_dfu_utils.c  nrf_dfu_ver_validation.c
components/libraries/crypto/: nrf_crypto_error.c  nrf_crypto_rng.c
components/libraries/crypto/backend/cc310/: cc310_backend_rng.c
components/libraries/fds/: fds.c  fds_internal_defs.h
components/libraries/timer/: app_timer.h  app_timer_freertos.c
components/libraries/util/: app_util_platform.h  nordic_common.h
components/softdevice/common/: nrf_sdh_freertos.c  nrf_sdh_soc.c
components/softdevice/s140/headers/: nrf_svc.h
components/toolchain/gcc/: Makefile.posix
examples/ble_app_hrs_freertos/armgcc/: ble_app_hrs_freertos_gcc_nrf52.ld
examples/ble_app_hrs_freertos/ble_app_hrs_freertos/: CMakeLists.txt  main.c
examples/ble_peripheral/ble_app_blinky/pca10056/s140/armgcc/_build/: nrf52840_xxaa.hex  nrf52840_xxaa.map  nrf52840_xxaa.out
examples/ble_peripheral/ble_app_blinky/pca10056/s140/armgcc/_build/nrf52840_xxaa/: SEGGER_RTT.c.d  SEGGER_RTT_printf.c.d  app_button.c.d  app_error.c.d  app_error_handler_gcc.c.d  app_error_weak.c.d  app_scheduler.c.d  app_timer2.c.d  app_util_platform.c.d  ble_advdata.c.d  ble_conn_params.c.d  ble_conn_state.c.d  ble_lbs.c.d  ble_srv_common.c.d  boards.c.d  drv_rtc.c.d  hardfault_implementation.c.d  main.c.d  nrf_assert.c.d  nrf_atfifo.c.d  nrf_atflags.c.d  nrf_atomic.c.d  nrf_balloc.c.d  nrf_ble_gatt.c.d  nrf_ble_qwr.c.d  nrf_drv_clock.c.d  nrf_drv_uart.c.d  nrf_fprintf.c.d  nrf_fprintf_format.c.d  nrf_log_backend_rtt.c.d  nrf_log_backend_serial.c.d  nrf_log_backend_uart.c.d  nrf_log_default_backends.c.d  nrf_log_frontend.c.d  nrf_log_str_formatter.c.d  nrf_memobj.c.d  nrf_pwr_mgmt.c.d  nrf_ringbuf.c.d  nrf_sdh.c.d  nrf_sdh_ble.c.d  (+11 more)
examples/ble_uart/armgcc/: ble_app_uart_gcc_nrf52.ld
examples/ble_uart/ble_uart/: CMakeLists.txt  main.c
examples/blink/armgcc/: blinky_gcc_nrf52.ld
examples/blink/blink/: CMakeLists.txt
examples/dfu/secure_bootloader/: CMakeLists.txt  main.c
examples/dfu/secure_bootloader/cmake/: arm-none-eabi-gcc.cmake
examples/dfu/secure_bootloader/pca10056_s140_ble/armgcc/: .Makefile.swp  Makefile  dfu_public_key.c  private_key.pem  secure_bootloader_gcc_nrf52.ld
examples/dfu/secure_bootloader/pca10056_s140_ble/armgcc/_build/: nrf52840_xxaa_s140.hex  nrf52840_xxaa_s140.in  nrf52840_xxaa_s140.map  nrf52840_xxaa_s140.out
examples/dfu/secure_bootloader/pca10056_s140_ble/armgcc/_build/nrf52840_xxaa_s140/: app_error_weak.c.d  app_scheduler.c.d  app_util_platform.c.d  ble_srv_common.c.d  boards.c.d  cc310_bl_backend_ecc.c.d  cc310_bl_backend_ecdsa.c.d  cc310_bl_backend_hash.c.d  cc310_bl_backend_init.c.d  cc310_bl_backend_shared.c.d  crc32.c.d  dfu-cc.pb.c.d  dfu_public_key.c.d  gcc_startup_nrf52840.S.d  main.c.d  mem_manager.c.d  nrf_assert.c.d  nrf_atfifo.c.d  nrf_atomic.c.d  nrf_balloc.c.d  nrf_bootloader.c.d  nrf_bootloader_app_start.c.d  nrf_bootloader_app_start_final.c.d  nrf_bootloader_dfu_timers.c.d  nrf_bootloader_fw_activation.c.d  nrf_bootloader_info.c.d  nrf_bootloader_wdt.c.d  nrf_crypto_ecc.c.d  nrf_crypto_ecdsa.c.d  nrf_crypto_hash.c.d  nrf_crypto_init.c.d  nrf_crypto_shared.c.d  nrf_dfu.c.d  nrf_dfu_ble.c.d  nrf_dfu_flash.c.d  nrf_dfu_handling_error.c.d  nrf_dfu_mbr.c.d  nrf_dfu_req_handler.c.d  nrf_dfu_settings.c.d  nrf_dfu_settings_svci.c.d  (+34 more)
examples/peripheral/blinky/pca10056/blank/armgcc/_build/: nrf52840_xxaa.hex  nrf52840_xxaa.map  nrf52840_xxaa.out
examples/peripheral/blinky/pca10056/blank/armgcc/_build/nrf52840_xxaa/: app_error.c.d  app_error_handler_gcc.c.d  app_error_weak.c.d  boards.c.d  main.c.d  nrf_atomic.c.d  nrf_balloc.c.d  nrf_fprintf.c.d  nrf_fprintf_format.c.d  nrf_log_frontend.c.d  nrf_log_str_formatter.c.d  nrf_memobj.c.d  nrf_ringbuf.c.d  nrf_strerror.c.d  nrfx_atomic.c.d  system_nrf52840.c.d
examples/peripheral/blinky/pca10056/mbr/armgcc/_build/: nrf52840_xxaa.hex  nrf52840_xxaa.map  nrf52840_xxaa.out
examples/peripheral/blinky/pca10056/mbr/armgcc/_build/nrf52840_xxaa/: app_error_handler_gcc.c.d  app_error_weak.c.d  app_util_platform.c.d  boards.c.d  main.c.d  nrf_assert.c.d  nrf_atomic.c.d  nrf_balloc.c.d  nrf_fprintf.c.d  nrf_fprintf_format.c.d  nrf_log_frontend.c.d  nrf_log_str_formatter.c.d  nrf_memobj.c.d  nrf_ringbuf.c.d  nrf_strerror.c.d  nrfx_atomic.c.d
scripts/: README.md  analyze_elf_execution_flow.py  automated_analysis.py  ble_app_hrs_freertos_updated.md  bootloader_dump.txt  bootloader_dump_halted.txt  capture_vectors.gdb  capture_vectors_gdb.py  clear_mbr_bootloader.bat  clear_mbr_bootloader.sh  compare_dumps.py  compare_halted_dumps.py  comparison_report.txt  create_settings_0x30000.py  debug_flash_program.md  debug_flash_program_wsl.md  direct_dump.txt  direct_dump_halted.txt  fix_flash_program.md  flash_program_fixed_summary.md  investigate_stack.gdb  investigate_stack_gdb.py  nrf52_memory_dump.py  nrf52_memory_dump_halted.py  relocate_hex.ps1  relocate_hex.py  relocate_hex_simple.py  run_analysis.bat  run_analysis.sh  run_halted_analysis.bat  sequential_memory_layout_summary.md  test_new_memory_layout.md  test_stack_corruption_fix.md
